--- a/src/project.properties
+++ b/src/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-8
-android.library.reference.1=E:/Java/Workspaces/google-play-services_lib
+android.library.reference.1=../../../../Synjones/mobile/trunk/core
+android.library.reference.2=../../../../Synjones/mobile/trunk/common
